--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ server:
   port: 18080
 spring:
   application:
-    name: {{service.code}}
+    name: train-20609
   cloud:
     config:
       failFast: true
@@ -19,3 +19,4 @@ management:
 security:
   basic:
     enabled: false
+
