--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,10 +9,6 @@ spring:
       percentage: 1.0
     stream:
       enabled: true
-  datasource:
-    url: jdbc:mysql://localhost:3306/demo_service?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: choerodon
-    password: 123456
   kafka: #使用原生spring kafka需要配置
     bootstrap-servers: localhost:9092
     consumer:
@@ -54,7 +50,7 @@ eureka:
       VERSION: v1
   client:
     serviceUrl:
-      defaultZone: http://localhost:8000/eureka/
+      defaultZone: http://register-server.training:8000/eureka/
     registryFetchIntervalSeconds: 10
 hystrix:
   command:
@@ -73,8 +69,7 @@ file-service:
   ribbon:
     ReadTimeout: 15000
     ConnectTimeout: 15000
-mybatis:
-  mapperLocations: classpath*:/mapper/*.xml
-  configuration: # 数据库下划线转驼峰配置
-    mapUnderscoreToCamelCase: true
+
+id: 20609
+name: 陈晋
 
