--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
             <artifactId>choerodon-starter-bus</artifactId>
             <version>${choerodon.starters.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.choerodon</groupId>
+            <artifactId>choerodon-starter-mybatis-mapper</artifactId>
+            <version>${choerodon.starters.version}</version>
+        </dependency>
+
 
 
         <!--mysql-->
